--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <meta name="description" content="My TechDegree Unit 3 Project">
     <title>My TechDegree Unit 3 Project</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/styles.css">
     <script src="https://kit.fontawesome.com/5a90728443.js" crossorigin="anonymous"></script>
 </head>
 
