--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
 
                     <div class="flex-pair">
                         <label for="name">Full Name</label>
-                        <input type="text" id="name" name="user-name" required>
+                        <input type="text" id="name" name="user-name" placeholder="Required" required>
                     </div>
 
                     <div class="flex-pair">
                         <label for="email">Email Address</label>
-                        <input type="email" id="email" name="user-email" required></label>
+                        <input type="email" id="email" name="user-email" placeholder="Required" required></label>
                     </div>
                         
                     <div class="flex-pair">    
