--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
 
                     <div class="flex-pair">
                         <label for="email">Email Address</label>
-                        <input type="email" id="email" name="user-email" placeholder="Required" required></label>
+                        <input type="email" id="email" name="user-email" placeholder="Required" required>
                     </div>
                         
                     <div class="flex-pair">    
                         <label for="phone">Phone Number</label>
-                        <input type="tel" id="phone" name="user-phone"></label>
+                        <input type="tel" id="phone" name="user-phone">
                     </div>
                     
                     <div class="flex-pair">   
