adjusted double border

--- a/index.html
+++ b/index.html
@@ -125,20 +125,20 @@
             <fieldset class="newsletter">
 
             <div class="choice-info">
-                    <h2>Newsletter</h2>
+                    <legend>Newsletter</legend>
                     <p>Select the newsletters you would like to receive</p>
             </div>
                 
             <fieldset class="choices">
-                <input type="checkbox" id="html-news" name="user_newsletter-html" value="html-news">
+                <input type="checkbox" id="html-news" name="user_newsletter" value="html-news">
                 <label for="html-news">HTML News</label>
                 <br>
 
-                <input type="checkbox" id="css-news" name="user_newsletter-css" value="css-news">
+                <input type="checkbox" id="css-news" name="user_newsletter" value="css-news">
                 <label for="css-news">CSS News</label>
                 <br>
 
-                <input type="checkbox" id="js-news" name="user_newsletter-js" value="js-news">
+                <input type="checkbox" id="js-news" name="user_newsletter" value="js-news">
                 <label for="js-news">Javascript News</label>
             </fieldset>
             
